# django-app

./: Dockerfile  docker-compose.yaml  pyproject.toml
mysite/: log.txt
mysite/authapp/: models.py  urls.py  views.py
mysite/authapp/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_bio.py
mysite/authapp/templates/authapp/: about_me.html  login.html  profile_update.html  register.html  users_details.html  users_list.html
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_category.py
mysite/blogapp/templates/blogapp/: articles_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/requestdataapp/templates/requestdataapp/: uploadfile.html
mysite/shopapp/: admin.py  forms.py  models.py  serializes.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: content_types-fixture.json  groups-fixture.json  orders-fixture.json  permissions-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/management/commands/: create_orders.py  create_products.py
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_order_products_order_user.py  0004_alter_order_products_alter_order_user.py  0005_product_discount.py  0006_product_created_by.py  0007_order_promocode.py  0008_alter_order_options_alter_product_options.py
mysite/shopapp/templates/admin/: csv_form.html
(+13 files in other folders)
